[workspace]
members = [
    "contracts/market",
    "contracts/reports"
]
resolver = "2"

[workspace.package]
authors = ["The Agora Developers"]
repository = "https://github.com/agoramarket/market"
edition = "2021"
license = "GPL-3.0-or-later"
version = "0.1.0"

[workspace.dependencies]
ink = { version = "5.1.1", default-features = false }
ink_e2e = { version = "5.1.1" }
scale = { package = "parity-scale-codec", version = "3.7", default-features = false, features = ["derive"] }
scale-info = { version = "2.11", default-features = false, features = ["derive"] }

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
