[package]
name = "market"
version = "0.1.0"
authors = ["The Agora Developers"]
edition = "2021"

[dependencies]
ink = { version = "5.0", default-features = false }
parity-scale-codec = { version = "3.6", default-features = false }
scale-info = { version = "2.10", default-features = false, features = ["derive"] }

[dev-dependencies]
ink_e2e = { version = "5.0" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "parity-scale-codec/std",
    "scale-info/std"
]
ink-as-dependency = []
e2e-tests = []
