[package]
name = "market"
version = "0.1.0"
authors = ["The Agora Developers"]
description = "A decentralized marketplace smart contract built with ink!"
repository = "https://github.com/agoramarket/market"
edition = "2021"

[dependencies]
ink = { version = "5.1.1", default-features = false }
scale-info = { version = "2.10", default-features = false, features = ["derive"] }

[dev-dependencies]
ink_e2e = { version = "5.1.1" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
]
ink-as-dependency = []
e2e-tests = []
