[package]
name = "reports"
version = "0.1.0"
authors = ["The Agora Developers"]
description = "Contrato de reportes y estadísticas del marketplace Ágora: rankings de reputación, productos más vendidos y métricas por categoría."
repository = "https://github.com/agoramarket/market"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
ink = { version = "5.1.1", default-features = false }
scale = { package = "parity-scale-codec", version = "3.7", default-features = false, features = ["derive"] }
scale-info = { version = "2.11", default-features = false, features = ["derive"] }
market = { path = "../market", default-features = false, features = ["ink-as-dependency"] }

[dev-dependencies]
ink_e2e = { version = "5.1.1" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "market/std",
]
ink-as-dependency = []
e2e-tests = ["ink-as-dependency"]